--- a/hm.css
+++ b/hm.css
@@ -1,10 +1,11 @@
 h1 {
   position: absolute;
   left: 30%;
-  top: -7%;
+  top: -8%;
   text-align: center;
   font-size: 50pt;
   text-shadow: 2px 2px #00f3ffc7;
+  padding-bottom: 5px;
 }
 
 body {
